feat(flow): created posts components: list, details and etc, created services and used

--- a/src/app/layout/authorized/authorized.component.html
+++ b/src/app/layout/authorized/authorized.component.html
@@ -1,1 +1,8 @@
-<p>authorized works!</p>
+<p-menubar [model]="items">
+  <ng-template pTemplate="start">
+    <h3>Vault</h3>
+  </ng-template>
+</p-menubar>
+<div class="layout">
+  <router-outlet></router-outlet>
+</div>
