--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -1,6 +1,18 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .unauthorizedLayout {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
 }
