--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -16,3 +16,15 @@
   flex-direction: column;
   margin-bottom: 15px;
 }
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
+.align-items-center {
+  align-items: center;
+}
